# chess

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md
include/actions/: move_piece.h  query_moves.h
include/algorithms/: chess.h
include/commands/: move_piece.h  possible_moves.h
include/conceptual/: location.h
include/conceptual/moves/: basic_move.h  capture_move.h  castle_move.h
include/controllers/: keyboard.h
include/entities/: board.h  chess.h  game.h  player.h
include/entities/pieces/: base_piece.h  bishop.h  king.h  knight.h  pawn.h  queen.h  rook.h
include/environment/: chess_environment.h
include/factories/: piece_factory.h
include/graphics/: window.h
include/helpers/: stl_helper.h
include/interfaces/: action.h  cloneable.h  command.h  controller.h  move.h  piece.h  printable.h
include/interfaces/visitors/: piece_visitor.h
include/io/: keyboard.h  logger.h
include/io/commands/: move_piece.h  possible_moves.h
include/pieces/: base_piece.h  bishop.h  king.h  knight.h  pawn.h  queen.h  rook.h
include/utilities/: logger.h
include/visitors/: castle_visitor.h  in_check_visitor.h
src/: main.cpp
src/actions/: move_piece.cpp  query_moves.cpp
src/algorithms/: chess.cpp
src/commands/: move_piece.cpp  possible_moves.cpp
src/conceptual/: location.cpp
src/conceptual/moves/: basic_move.cpp  capture_move.cpp  castle_move.cpp
src/controllers/: keyboard.cpp
src/entities/: board.cpp  chess.cpp  game.cpp  player.cpp
src/entities/pieces/: base_piece.cpp  bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
src/environment/: chess_environment.cpp
src/factories/: piece_factory.cpp
src/graphics/: window.cpp
src/io/: keyboard.cpp
src/io/commands/: move_piece.cpp  possible_moves.cpp
src/pieces/: base_piece.cpp  bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
src/utilities/: logger.cpp
src/visitors/: castle_visitor.cpp  in_check_visitor.cpp
test/: CMakeLists.txt
test/src/: test_main.cpp
